Closed Bug 1494021 Opened 6 years ago Closed 6 years ago

Strong performance regressions in ASAN Nightly

Categories

(Core :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: gcp, Assigned: decoder)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

I've been running ASAN Nightly since it was released. The performance penalty is generally small enough that I'm happy with it. Since about a week though, Firefox is unusably sluggish, to the extent that it's slowing me down in working.

I understand this is likely from enabling Chaos Mode. I don't have a clean cut testcase that shows a clear performance regression, to figure out which settings are the worst offenders.

But it's a bit concerning that I wouldn't want to run ASAN Nightly any more (and I have had people on IRC tell me the same).
Do you still see the slowdowns after the fix from bug 1492929?
And perhaps also check out bug 1492508 just in case your updater is stuck.
IS this on Linux or Windows? The OS field here says Linux, if that is correct, then neither of the bugs mentioned by :dmajor apply to you.
Flags: needinfo?(gpascutto)
This is on Linux.
Flags: needinfo?(gpascutto)
Ah - sorry for the noise.
I assume this is related to Thread/Task delaying. So what we could of course do is decrease the maximum delay time for the threads. However, I'm not sure if that will influence the ability to find issues.

Instead, what we could probably do is make the delays less linear, either by not using a a uniform distribution when selecting the delay value or by simply skipping some delaying altogether (e.g. only delay with a certain percentage at all).

What do you think about this, Nathan?
Flags: needinfo?(nfroyd)
A non-uniform distribution seems like the easiest thing.

Delaying a certain percentage of the time just seems like adding another variable into things: when you do delay, how much do you delay for?  And so forth.

Or we should just remove the dumb-as-rocks implementation I wrote, because it's causing too much trouble.
Flags: needinfo?(nfroyd)
Trying to write something in Google docs for example has an unbearable amount of lag.
Also affected by this - had to stop using ASAN Nightly on my Linux laptop. It's still usable on my 32-core desktop. I'm also using WebRender, which might make it worse.
I've decided to temporarily disable task dispatching/running chaos mode for ASan to resolve this. We can re-enable this once we have found a way to make this less of a performance issue (e.g. by using a non-uniform probability distribution for the delays).
Comment on attachment 9013244 [details]
Bug 1494021 - Disable task dispatching/running chaos mode in ASan Nightly. r?froydnj

Nathan Froyd [:froydnj] has approved the revision.
Attachment #9013244 - Flags: review+
Pushed by choller@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b6da34ab32a6
Disable task dispatching/running chaos mode in ASan Nightly. r=froydnj
https://hg.mozilla.org/mozilla-central/rev/b6da34ab32a6
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Assignee: nobody → choller
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: